Fix height of filters bar on mobile

--- a/projects/srm/src/app/searchbox-header/searchbox-header.component.less
+++ b/projects/srm/src/app/searchbox-header/searchbox-header.component.less
@@ -12,8 +12,6 @@
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
         padding: 8px 0;
         gap: 8px;
-        // gap: 14px;
-        padding-bottom: 14px;
     });
 
 }
